profilelist1exp/unpackaged/objects/Account_Play__c.object
<CustomObject>
    <fields>
        <fullName>Accept_Reject_Status__c</fullName>
        <label>Accept/Reject/Reassign Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted By Sales</fullName>
                    <color>#33CC00</color>
                    <label>Accepted By Sales</label>
                </value>
                <value>
                    <fullName>Rejected By Sales</fullName>
                    <color>#FF0000</color>
                    <label>Rejected By Sales</label>
                </value>
                <value>
                    <fullName>Reassigned By Sales</fullName>
                    <color>#3366FF</color>
                    <label>Reassigned By Sales</label>
                </value>
                <value>
                    <fullName>Routed to Channel</fullName>
                </value>
                <value>
                    <fullName>Routed to Segment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Executive/ PDM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Play_Accepted_Date__c</fullName>
        <label>Account Play Accepted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account_Play_Close_Date__c</fullName>
        <label>Account Play Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account_Play_Expiry_Date_New__c</fullName>
        <label>Account Play Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Play_Expiry_Date__c</fullName>
        <formula>Campaign__r.Account_Play_Expiry_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Play Expiry Date Old</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Play_Owner_Role__c</fullName>
        <formula>TEXT(Campaign__r.Follow_Up_Role__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Play Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Play_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Play Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plays2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Play_Owners_Manager__c</fullName>
        <description>Account Play Owners Manager</description>
        <formula>Account_Play_Owner__r.Manager.FirstName + &apos; &apos; + Account_Play_Owner__r.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Play Owner&apos;s Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Play_Qualified_Date__c</fullName>
        <label>Account Play Qualified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account_Sales_Channel_Id__c</fullName>
        <formula>Account__r.Sales_Channel__r.Group_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Sales Channel Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Plays</relationshipLabel>
        <relationshipName>Sales_Plays</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Actions_Available__c</fullName>
        <formula>IF(OR (ISPICKVAL(Status__c, &apos;Closed - Expired&apos;),ISPICKVAL(Status__c, &apos;Routed to Channel&apos;)),&apos;[No Action Available]&apos;,IF( AND( ISPICKVAL(Status__c, &apos;Requires Follow-Up&apos;), OR (ISPICKVAL(Accept_Reject_Status__c, &apos;&apos;), ISPICKVAL(Accept_Reject_Status__c, &apos;Reassigned By Sales&apos;))) , 
HYPERLINK(Id &amp; &apos;/e?nooverride=1&amp;retURL=/&apos; &amp; Id &amp; &apos;&amp;00NA0000000b8ZI=Accepted By Sales&apos;, IMAGE(&quot;resource/1257839368000/MA_Accept&quot;, &apos;Accept&apos;), &apos;_parent&apos;) &amp; &apos; &apos; &amp; 
HYPERLINK(Id &amp; &apos;/e?nooverride=1&amp;retURL=/&apos; &amp; Id &amp; &apos;&amp;00NA0000000b8ZI=Rejected By Sales&amp;00NA0000000b8Zc=Rejected - Completed Follow-Up&apos;, IMAGE(&quot;resource/1257839368000/MA_Reject&quot;, &apos;Reject&apos;), &apos;_parent&apos;) &amp; &apos; &apos; &amp; 
HYPERLINK(&apos;/apex/RelationshipLeadAccPlayTM?Id=&apos;+Id+&apos;&amp;AccId=&apos;+ Account__r.Id+&apos;&amp;OwnerId=&apos;+ Account_Play_Owner__c , IMAGE(&quot;resource/1266470716000/MA_Reassign&quot;, &quot;Reassign&quot;) , &quot;_parent&quot;), 

IF( AND(OR(ISPICKVAL(Status__c, &apos;Attempted to Contact - Awaiting Response&apos;),ISPICKVAL(Status__c, &apos;Future Follow-Up&apos;)),NOT( ISPICKVAL( Lead_Quality__c , &apos;Qualified&apos;) ),NOT( ISPICKVAL(Status__c, &apos;Closed - Expired&apos;) )) , 
HYPERLINK(Id &amp; &apos;/e?nooverride=1&amp;retURL=/&apos; &amp; Id, IMAGE(&quot;resource/1257839368000/MA_UpdateRecord&quot;, &apos;Update Record&apos;), &apos;_parent&apos;), 

IF(AND( ISPICKVAL(Lead_Quality__c, &apos;Qualified&apos;), OR(ISPICKVAL(Opportunity_Status__c,&apos;New Opportunity&apos;), ISPICKVAL(Opportunity_Status__c,&apos;Existing Opportunity&apos;),ISPICKVAL(Opportunity_Status__c,&apos;Run Rate Opportunity&apos;)), Opportunity__c=null ), 
HYPERLINK(&apos;006/e?retURL=/&apos; &amp; Id &amp; &apos;&amp;RecordType=012300000004zf2&amp;00NA0000000bC8S=&apos; &amp; Id&amp;&apos;&amp;opp4=&apos;&amp; Account__r.Name &amp;&apos;&amp;opp4_lkid=&apos; &amp; Account__r.Id&amp;&apos;&amp;opp17=&apos;&amp; Campaign__r.Name&amp;&apos;&amp;00NA0000000b8l9=1&amp;opp5=Deal/Bid - Direct&amp;opp11=Plan - 1%25&amp;nooverride=1&apos; , IMAGE(&quot;resource/1257839368000/MA_NewOpptys&quot;, &apos;New Opportunity&apos;),&apos;_parent&apos;) &amp; &apos; &apos; &amp; 
HYPERLINK(&apos;apex/MarketingExistingOppAssn?retURL=%2F&apos; &amp; Id &amp; &apos;&amp;accountPlayId=&apos; &amp; Id &amp; &apos;&amp;accid=&apos; &amp; Account__r.Id &amp; &apos;&amp;campaignid=&apos; &amp; Campaign__c , IMAGE(&quot;resource/1257839368000/MA_ExistingOpptys&quot;, &apos;Existing Opportunity&apos;),&apos;_parent&apos;)  , 

&apos;[No Action Available]&apos;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actions Available</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Called_Customer__c</fullName>
        <label>Spoke to Customer?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Accept_Reject_Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <color>#33CC00</color>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                    <color>#FF0000</color>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Camp_Vehicle__c</fullName>
        <description>Campaign Vehicle” formula fields referencing Campaign</description>
        <formula>TEXT(Campaign__r.Campaign_Vehicle__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Vehicle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Vehicle__c</fullName>
        <label>Campaign Vehicle(Not In Use)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advisory Councils</fullName>
                    <color>#0B6FCE</color>
                    <label>Advisory Councils</label>
                </value>
                <value>
                    <fullName>Assessment (HW/Services)</fullName>
                    <color>#78C953</color>
                    <label>Assessment (HW/Services)</label>
                </value>
                <value>
                    <fullName>CXO Events</fullName>
                    <color>#E27001</color>
                    <label>CXO Events</label>
                </value>
                <value>
                    <fullName>Dell Day</fullName>
                    <color>#A845DC</color>
                    <label>Dell Day</label>
                </value>
                <value>
                    <fullName>DM</fullName>
                    <color>#F3D904</color>
                    <label>DM</label>
                </value>
                <value>
                    <fullName>Door Opener (High Value)</fullName>
                    <color>#A53711</color>
                    <label>Door Opener (High Value)</label>
                </value>
                <value>
                    <fullName>Door Opener (Value)</fullName>
                    <color>#66E9BD</color>
                    <label>Door Opener (Value)</label>
                </value>
                <value>
                    <fullName>eDM/Email</fullName>
                    <color>#0B24BE</color>
                    <label>eDM/Email</label>
                </value>
                <value>
                    <fullName>eSeminar/Webcast/Webinar</fullName>
                    <color>#419249</color>
                    <label>eSeminar/Webcast/Webinar</label>
                </value>
                <value>
                    <fullName>Lattice Sales Touch</fullName>
                    <color>#FFFF66</color>
                    <label>Lattice Sales Touch</label>
                </value>
                <value>
                    <fullName>Multiple Vehicles</fullName>
                    <color>#B6E32E</color>
                    <label>Multiple Vehicles</label>
                </value>
                <value>
                    <fullName>Non-Marketing</fullName>
                    <color>#000000</color>
                    <label>Non-Marketing</label>
                </value>
                <value>
                    <fullName>Online Advertising</fullName>
                    <color>#641CCF</color>
                    <label>Online Advertising</label>
                </value>
                <value>
                    <fullName>Online Inbound</fullName>
                    <color>#F96FB7</color>
                    <label>Online Inbound</label>
                </value>
                <value>
                    <fullName>Roadshow</fullName>
                    <color>#2F5D85</color>
                    <label>Roadshow</label>
                </value>
                <value>
                    <fullName>Sales Touch</fullName>
                    <color>#AFCADF</color>
                    <label>Sales Touch</label>
                </value>
                <value>
                    <fullName>Seed Unit</fullName>
                    <color>#8F6429</color>
                    <label>Seed Unit</label>
                </value>
                <value>
                    <fullName>Seminar/Conference</fullName>
                    <color>#EFAE73</color>
                    <label>Seminar/Conference</label>
                </value>
                <value>
                    <fullName>Special Events</fullName>
                    <color>#57F17C</color>
                    <label>Special Events</label>
                </value>
                <value>
                    <fullName>Standalone Telemarketing</fullName>
                    <color>#0B6FCE</color>
                    <label>Standalone Telemarketing</label>
                </value>
                <value>
                    <fullName>Trade Show</fullName>
                    <color>#78C953</color>
                    <label>Trade Show</label>
                </value>
                <value>
                    <fullName>Workshop</fullName>
                    <color>#E27001</color>
                    <label>Workshop</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.RecordType.Name</field>
                <operation>notEqual</operation>
                <value>Campaign 2.0</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Account Plays</relationshipLabel>
        <relationshipName>Sales_Plays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Challenges_Driving_the_Project__c</fullName>
        <inlineHelpText>Customer pain points past, present, future.</inlineHelpText>
        <label>Challenges Driving the Project</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Channel_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Channel Lead created when routing Account Play to Channel</inlineHelpText>
        <label>Channel Lead</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Lead.RecordType.Name</field>
                <operation>notEqual</operation>
                <value>Channel Lead 2.0</value>
            </filterItems>
            <filterItems>
                <field>Lead.RecordType.Name</field>
                <operation>notEqual</operation>
                <value>Direct Lead 2.0</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Account Plays</relationshipLabel>
        <relationshipName>Account_Plays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_Follow_Up_Date__c</fullName>
        <formula>IF ( OR (ISPICKVAL( Status__c, &quot;Accepted - Completed Follow-Up&quot;) , ISPICKVAL( Status__c, &quot;Rejected - Completed Follow-Up&quot;)) , NOW(), null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Consents_to_Engage_Dell_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Customer consent is required to route a Dell lead to a channel partner; after you have received customer consent, tick the box to complete the “Route to Channel” process.</inlineHelpText>
        <label>Customer Consents to Engage Dell Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Email_Address__c</fullName>
        <label>Customer Email Address(s)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Desired_Outcome__c</fullName>
        <label>Desired Outcome?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Do_they_have_access_to_approved_funds__c</fullName>
        <label>Do they have access to approved funds?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Budget__c</fullName>
        <label>Estimated Budget?</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Date__c</fullName>
        <label>Follow-Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Notes__c</fullName>
        <description>Mandatory once the Lead Quality is set to &quot;Valid&quot;</description>
        <label>Sales Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Geo_Populated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Geo Populated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inside_Sales_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inside Sales Manager/ Channel ISM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Plays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inside_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inside Sales Rep/ ICAM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Plays1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interested_in_DFS_funding__c</fullName>
        <label>Interested in DFS funding?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_an_old_migrated_record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is to be populated as TRUE only for the initial migration of old Account CMs to Account Play. For all subsequent data it will be set to FALSE. This will only be used for reporting purposes.</description>
        <label>Is this an old migrated record?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Owner_Reassignment_Date__c</fullName>
        <label>Last Owner Reassignment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lattice_Account_Play_Owner_ID__c</fullName>
        <label>Lattice - Account Play Owner ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lattice_Action_Reason__c</fullName>
        <label>Lattice - Action Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lattice_Creation_Date__c</fullName>
        <label>Lattice - Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lattice_IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lattice - IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lattice_Last_Disposition_Date__c</fullName>
        <label>Lattice - Last Disposition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lattice_Last_Modification_Date__c</fullName>
        <label>Lattice - Last Modification Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lattice_Last_Transitioner_ID__c</fullName>
        <label>Lattice - Last Transitioner ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lattice_Last_Transitioner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lattice - Last Transitioner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plays4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lattice_Likelihood_Category__c</fullName>
        <label>Lattice - Likelihood Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lattice_Likelihood__c</fullName>
        <label>Lattice - Likelihood</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lattice_Manager_2_ID__c</fullName>
        <label>Lattice - Manager 2 ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lattice_Manager_2__c</fullName>
        <label>Lattice - Manager 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lattice_Manager_ID__c</fullName>
        <label>Lattice - Manager ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lattice_Manager__c</fullName>
        <label>Lattice - Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lattice_Play_External_ID__c</fullName>
        <label>Lattice - Play External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lattice_Play_ID__c</fullName>
        <label>Lattice - Play ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lattice_Play_Name__c</fullName>
        <label>Lattice - Play Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lattice_Pre_Lead_External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Lattice - Pre Lead External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lattice_Region__c</fullName>
        <label>Lattice - Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lattice_Role__c</fullName>
        <label>Lattice - Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lattice_Source_of_Play__c</fullName>
        <label>Lattice - Source of Play</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Quality__c</fullName>
        <label>Sales Qualified?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Called_Customer__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Qualified</fullName>
                    <color>#33CC00</color>
                    <label>Qualified</label>
                </value>
                <value>
                    <fullName>Unqualified</fullName>
                    <color>#FF0000</color>
                    <label>Unqualified</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Reset_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates who reset this Lead</description>
        <label>Lead Reset By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plays1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Reset_Date__c</fullName>
        <description>Indicates when this Lead is reset</description>
        <label>Lead Reset Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Reset__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this Lead has been reset</description>
        <label>Lead Reset?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License_Expiration_Date__c</fullName>
        <label>License Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Expiration_Month__c</fullName>
        <label>License Expiration Month</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Number__c</fullName>
        <label>License Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Name__c</fullName>
        <label>Manufacturer Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Comments__c</fullName>
        <label>Marketing Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <label>Next Steps</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Nominated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nominated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plays3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nomination_date__c</fullName>
        <label>Nomination date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity Created?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Status__c</fullName>
        <inlineHelpText>Please click on the relevant opportunity buttons after selecting opportunity status to complete lead follow up</inlineHelpText>
        <label>Opportunity Status?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Lead_Quality__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>New Opportunity</fullName>
                    <color>#0B6FCE</color>
                    <label>New Opportunity</label>
                </value>
                <value>
                    <fullName>Existing Opportunity</fullName>
                    <color>#78C953</color>
                    <label>Existing Opportunity</label>
                </value>
                <value>
                    <fullName>APOS Opportunity</fullName>
                    <color>#A845DC</color>
                    <label>APOS Opportunity</label>
                </value>
                <value>
                    <fullName>SMB Opportunity</fullName>
                </value>
                <value>
                    <fullName>Channel Opportunity</fullName>
                </value>
                <value>
                    <fullName>Run Rate Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Sales_Plays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Created_Date__c</fullName>
        <description>This date is to be populated with the original Created Date value only for the initial migration of old Account CMs to Account Play. For all subsequent data it will be blank. This will only be used for reporting purposes.</description>
        <label>Original Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Action__c</fullName>
        <formula>IF( 
AND( 
ISPICKVAL(Lead_Quality__c, &apos;Qualified&apos;), 
ISPICKVAL(Opportunity_Status__c,&apos;APOS Opportunity&apos;), 
Opportunity__c=null ), 

HYPERLINK(&apos;006/e?retURL=/&apos; &amp; Id &amp; &apos;&amp;RecordType=012A0000000UvEp&amp;00NA0000000bC8S=&apos; &amp; Id&amp;&apos;&amp;opp4=&apos;&amp; Account__r.Name &amp;&apos;&amp;opp4_lkid=&apos; &amp; Account__r.Id&amp;&apos;&amp;opp17=&apos;&amp; Campaign__r.Name&amp;&apos;&amp;00NA0000000b8l9=1&amp;opp5=Deal/Bid - Direct&amp;00N700000028ArQ=APOS&amp;00N30000001O7vL=APOS&amp;opp14=&apos;&amp; Name &amp;&apos;&amp;opp11=Discover - 10%25&amp;nooverride=1&apos; , IMAGE(&quot;resource/1298094458000/APOS_RT&quot;, &apos;APOS&apos;),&apos;_parent&apos;) &amp; &apos; &apos; &amp; 

HYPERLINK(&apos;apex/MarketingExistingOppAssn?retURL=%2F&apos; &amp; Id &amp; &apos;&amp;accountPlayId=&apos; &amp; Id &amp; &apos;&amp;accid=&apos; &amp; Account__r.Id &amp; &apos;&amp;campaignid=&apos; &amp; Campaign__c , IMAGE(&quot;resource/1268544881000/MA_ExistingOpptys&quot;, &apos;Existing Opportunity&apos;),&apos;_parent&apos;) , 

IF(AND( ISPICKVAL(Lead_Quality__c, &apos;Qualified&apos;),(ISPICKVAL(Opportunity_Status__c,&apos;SMB Opportunity&apos;)), Opportunity__c=null ), 

HYPERLINK(&apos;006/e?retURL=/&apos; &amp; Id &amp; &apos;&amp;RecordType=012A0000000Vhy7&amp;00NA0000000bC8S=&apos; &amp; Id&amp;&apos;&amp;opp4=&apos;&amp; Account__r.Name &amp;&apos;&amp;opp4_lkid=&apos; &amp; Account__r.Id&amp;&apos;&amp;opp17=&apos;&amp; Campaign__r.Name&amp;&apos;&amp;00NA0000000b8l9=1&amp;opp5=Deal/Bid - Direct&amp;opp11=Plan - 1%25&amp;nooverride=1&apos; , IMAGE(&quot;resource/1352358599000/MA_NewSMBOpptys&quot;, &apos;New SMB Opportunity&apos;),&apos;_parent&apos;), 

&apos;[No Action Available]&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Play_Type__c</fullName>
        <formula>$RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Play Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <infoMessage>Contacts listed here are filtered automatically to the associated Account in this Account Play record</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Plays</relationshipLabel>
        <relationshipName>Account_Plays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Projected_Value__c</fullName>
        <label>Projected Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Accept_Reject_Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Not my account</fullName>
                    <color>#0B6FCE</color>
                    <label>Not my account</label>
                </value>
                <value>
                    <fullName>No contact info</fullName>
                    <color>#78C953</color>
                    <label>No contact info</label>
                </value>
                <value>
                    <fullName>Dell not on contract</fullName>
                    <color>#E27001</color>
                    <label>Dell not on contract</label>
                </value>
                <value>
                    <fullName>Wrong / missing information</fullName>
                    <color>#A845DC</color>
                    <label>Wrong / missing information</label>
                </value>
                <value>
                    <fullName>Already lost</fullName>
                    <color>#F3D904</color>
                    <label>Already lost</label>
                </value>
                <value>
                    <fullName>Already in progress</fullName>
                    <color>#A53711</color>
                    <label>Already in progress</label>
                </value>
                <value>
                    <fullName>Already won</fullName>
                    <color>#66E9BD</color>
                    <label>Already won</label>
                </value>
                <value>
                    <fullName>Lost to competitor</fullName>
                    <color>#0B24BE</color>
                    <label>Lost to competitor</label>
                </value>
                <value>
                    <fullName>Chose not to renew</fullName>
                    <color>#419249</color>
                    <label>Chose not to renew</label>
                </value>
                <value>
                    <fullName>Moved to Dell owned S/W</fullName>
                    <color>#B6E32E</color>
                    <label>Moved to Dell owned S/W</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Roadblocks__c</fullName>
        <label>Roadblocks</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Route_to_Channel__c</fullName>
        <formula>IF( AND(ISBLANK(Channel_Lead__c), 
	RecordTypeId = &apos;012A0000000TWRX&apos;, 
	OR(ISPICKVAL( Status__c , &apos;Opened&apos;),
           ISPICKVAL(Status__c, &apos;Contacted&apos;),
           ISPICKVAL(Status__c, &apos;Assign to Channel Partner&apos;) 
        ), 
	OR( $User.Id = Account_Executive__c, 
		$User.Id = Account_Play_Owner__c, 
		$User.Id = Inside_Sales_Manager__c , 
		$User.Id = Inside_Sales_Rep__c, 
		$User.Id = Technical_Sales_Rep__c , 
		$User.Id = Solution_Specialist__c) 
) 
, HYPERLINK(&apos;/apex/CMAP_RouteAccountPlay?APId=&apos;+Id, 
IMAGE(&apos;resource/1362106041000/CMAP_RouteToChannel&apos;, &apos;RouteToChannelButton&apos;),&apos;_parent&apos;), &quot;&quot;)</formula>
        <inlineHelpText>Routing Segment Account Play to Channel</inlineHelpText>
        <label>Route to Channel</label>
        <type>Text</type>
    </fields>
</CustomObject>